@@ -1,3 +1,9 @@
+9 November 2007: Wouter
+	- took ldns snapshot in repo.
+	- default config file is /etc/unbound/unbound.conf.
+	  If it doesn't exist, it is installed with the doc/example.conf file.
+	  The file is not deleted on uninstall.
+	
 8 November 2007: Wouter
 	- Fixup chroot and drop user privileges.
 	- new L root ip address in default hints.
